--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGODB_URL="mongodb+srv://nguyentai0371:0Tainguyen0@cluster0.uovtxms.mongodb.net/2tstore?retryWrites=true&w=majority"
 SESSION_SECRET="2tstoreaccesskey"
-DOMAIN_URL="http://localhost:3000"
+URL="http://localhost:3000"
 CLOUDINARY_CLOUD_NAME='dmnqiglih'
 CLOUDINARY_API_KEY='842755378946149'
 CLOUDINARY_API_SECRET='Jj9gw64GUi94Bjfg6C73qQo-bw8'
