--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-scroll-parallax": "^3.4.5",
+    "sharp": "^0.33.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18",
